tests/transpiler/x/fortran/for_list_collection.error
exit status 1
/workspace/mochi/tests/transpiler/x/fortran/for_list_collection.f90:6:5:

    6 |     n = n_arr(i_n)
      |     1
Error: Symbol ‘n’ at (1) has no IMPLICIT type
